fix: overlapping issues

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -163,7 +163,7 @@ select
 
 .scrollable-box
   display: inline-block
-  max-width: 50vw
+  max-width: 30vw
   min-width: 100%
   overflow: scroll
   text-overflow: clip
